fix: UI overflows

--- a/app/globals.css
+++ b/app/globals.css
@@ -203,7 +203,7 @@
   :root,
   body,
   html {
-    height: 100%;
+    /* height: 100%; */
     @apply text-base bg-base;
   }
   * {
